WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282586
[Win][MediaFoundation] video shows a black blank area for
https://www.w3.org/2010/05/video/mediaevents.html
https://bugs.webkit.org/show_bug.cgi?id=282586
Summary
[Win][MediaFoundation] video shows a black blank area for https://www.w3.org/...
Fujii Hironori
Reported
2024-11-04 19:11:01 PST
[Win][MediaFoundation] video shows a black blank area for
https://www.w3.org/2010/05/video/mediaevents.html
1. Load
https://www.w3.org/2010/05/video/mediaevents.html
2. Push Play button Expected: video playback Actual: black blank area
281819@main
good
282152@main
bad
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2024-11-04 19:32:23 PST
This is not 100% reproducible. Hard to bisect.
281382@main
good
281819@main
bad
281637@main
seems to be a regression point.
Fujii Hironori
Comment 2
2024-11-04 19:54:52 PST
281382@main
is also reproducible.
281637@main
isn't a regression point.
Fujii Hironori
Comment 3
2024-11-04 20:06:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36174
EWS
Comment 4
2024-11-05 11:42:16 PST
Committed
286175@main
(0cce879db374): <
https://commits.webkit.org/286175@main
> Reviewed commits have been landed. Closing PR #36174 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2024-11-05 11:43:13 PST
<
rdar://problem/139302170
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug