[Win][MediaFoundation] the video is black blank for https://www.w3.org/2010/05/video/mediaevents.html https://bugs.webkit.org/show_bug.cgi?id=282586

Reviewed by Don Olmstead.

MediaPlayerPrivateMediaFoundation was randomly failing to show the
video playback. m_size of MediaPlayerPrivateMediaFoundation was empty
in the case. setPresentationSize was called before an instance of
MediaPlayerPrivateMediaFoundation was created.
NullMediaPlayerPrivate::setPresentationSize was called in the case.

We should use MediaPlayer::presentationSize() to get the correct
presentation size. No longer need to override setPresentationSize.

* Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::onSessionStarted):
(WebCore::MediaPlayerPrivateMediaFoundation::setPresentationSize): Deleted.
* Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.h:

Canonical link: https://commits.webkit.org/286175@main